--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -43,3 +43,5 @@
 @using SPTarkov.Launcher.Components.Settings.Switches
 
 @using Size = MudBlazor.Size
+
+@using Version = SemanticVersioning.Version;
