--- a/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDownloadDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDownloadDialog.razor
@@ -66,6 +66,12 @@
                     dictOfDeps.Add(dep.Guid, depVersion.Version);
                     if (ModManager.GetMods().TryGetValue(dep.Guid, out var mod) && mod.ModVersion < depVersion.Version)
                     {
+                        // check if mod exists, if it does, check version, if its newer, download it
+                        ModManager.DownloadMod(dep, depVersion, Token);
+                    }
+                    else if (mod is null)
+                    {
+                        // check if mod exists, if it doesnt, download it
                         ModManager.DownloadMod(dep, depVersion, Token);
                     }
                 }
