use jpg instead of png

--- a/project/SPTarkov.Launcher/Shared/MainLayout.razor
+++ b/project/SPTarkov.Launcher/Shared/MainLayout.razor
@@ -17,7 +17,7 @@
 <MudContainer Class="no-select overlay-container unset absolute">
     @if (ConfigHelper.GetConfig().UseBackground)
     {
-        <MudImage Src="./bg.png" Class="no-select fixed mud-height-full mud-width-full background-image-cover"/>
+        <MudImage Src="./bg.jpg" Class="no-select fixed mud-height-full mud-width-full background-image-cover"/>
     }
     <div class="no-select fixed mud-height-full mud-width-full background-overlay"></div>
 </MudContainer>
